// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|Forms/TextArea default 1`] = `
<div
  style={
    Object {
      "margin": "30px",
    }
  }
>
  <div>
    <div
      style={Object {}}
    >
      <div
        style={
          Object {
            "maxWidth": "500px",
          }
        }
      >
        <div
          className="input-field"
        >
          <textarea
            className="input-field__input input-field__input--full-width input-field__input--no-resize"
            onChange={[Function]}
            placeholder="My text area"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-4akams"
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  TextArea
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      placeholder
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          My text area
                        </span>
                        "
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              className="css-gydez8"
              onClick={[Function]}
            >
              <div
                className="css-kv47nt"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              TextArea
              " Component
            </h2>
            <table
              className="css-1ytzlk7"
            >
              <thead>
                <tr>
                  <th
                    className="css-d52hbj"
                  >
                    property
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    propType
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    required
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    default
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    value
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    yes
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    onChange
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    yes
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    placeholder
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    fullWidth
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span
                      style={
                        Object {
                          "color": "#a11",
                        }
                      }
                    >
                      true
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    resize
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span
                      style={
                        Object {
                          "color": "#a11",
                        }
                      }
                    >
                      false
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    style
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    error
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    type
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span>
                      unknown
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      text
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|Forms/TextArea fixed width 1`] = `
<div
  style={
    Object {
      "margin": "30px",
    }
  }
>
  <div>
    <div
      style={Object {}}
    >
      <div
        style={
          Object {
            "maxWidth": "500px",
          }
        }
      >
        <div
          className="input-field"
          style={
            Object {
              "width": "200px",
            }
          }
        >
          <textarea
            className="input-field__input input-field__input--no-resize"
            onChange={[Function]}
            placeholder="My text area"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-4akams"
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  TextArea
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      placeholder
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          My text area
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      fullWidth
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }
                        >
                          false
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      style
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              width
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            '200px'
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              className="css-gydez8"
              onClick={[Function]}
            >
              <div
                className="css-kv47nt"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              TextArea
              " Component
            </h2>
            <table
              className="css-1ytzlk7"
            >
              <thead>
                <tr>
                  <th
                    className="css-d52hbj"
                  >
                    property
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    propType
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    required
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    default
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    value
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    yes
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    onChange
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    yes
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    placeholder
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    fullWidth
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span
                      style={
                        Object {
                          "color": "#a11",
                        }
                      }
                    >
                      true
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    resize
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span
                      style={
                        Object {
                          "color": "#a11",
                        }
                      }
                    >
                      false
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    style
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    error
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    type
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span>
                      unknown
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      text
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|Forms/TextArea with error 1`] = `
<div
  style={
    Object {
      "margin": "30px",
    }
  }
>
  <div>
    <div
      style={Object {}}
    >
      <div
        style={
          Object {
            "maxWidth": "500px",
          }
        }
      >
        <div
          className="input-field"
        >
          <span
            className="input-field__error"
          >
            This text area is required
          </span>
          <textarea
            className="input-field__input input-field__input--full-width input-field__input--error input-field__input--no-resize"
            onChange={[Function]}
            placeholder="My text area"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-4akams"
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  TextArea
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      placeholder
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          My text area
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      error
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          This text area is required
                        </span>
                        "
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              className="css-gydez8"
              onClick={[Function]}
            >
              <div
                className="css-kv47nt"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              TextArea
              " Component
            </h2>
            <table
              className="css-1ytzlk7"
            >
              <thead>
                <tr>
                  <th
                    className="css-d52hbj"
                  >
                    property
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    propType
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    required
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    default
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    value
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    yes
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    onChange
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    yes
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    placeholder
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    fullWidth
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span
                      style={
                        Object {
                          "color": "#a11",
                        }
                      }
                    >
                      true
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    resize
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span
                      style={
                        Object {
                          "color": "#a11",
                        }
                      }
                    >
                      false
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    style
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    error
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    type
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span>
                      unknown
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      text
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|Forms/TextArea without placeholder 1`] = `
<div
  style={
    Object {
      "margin": "30px",
    }
  }
>
  <div>
    <div
      style={Object {}}
    >
      <div
        style={
          Object {
            "maxWidth": "500px",
          }
        }
      >
        <div
          className="input-field"
        >
          <textarea
            className="input-field__input input-field__input--full-width input-field__input--no-resize"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-4akams"
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  TextArea
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              className="css-gydez8"
              onClick={[Function]}
            >
              <div
                className="css-kv47nt"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              TextArea
              " Component
            </h2>
            <table
              className="css-1ytzlk7"
            >
              <thead>
                <tr>
                  <th
                    className="css-d52hbj"
                  >
                    property
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    propType
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    required
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    default
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    value
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    yes
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    onChange
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    yes
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    placeholder
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    fullWidth
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span
                      style={
                        Object {
                          "color": "#a11",
                        }
                      }
                    >
                      true
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    resize
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span
                      style={
                        Object {
                          "color": "#a11",
                        }
                      }
                    >
                      false
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    style
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    error
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    type
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span>
                      unknown
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      text
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
